--- a/gh-actions/common/build-debian/action.yaml
+++ b/gh-actions/common/build-debian/action.yaml
@@ -268,6 +268,13 @@ runs:
             echo "::endgroup::"
           fi
 
+          set -x
+          echo "XXX: Checking architecture.mk"
+          ls -l /usr/share/rustc/architecture.mk
+          dpkg -S /usr/share/rustc/architecture.mk
+          ls -l /usr/share/dpkg/architecture.mk
+          dpkg -S /usr/share/dpkg/architecture.mk
+
           echo "::group::Build debian source package"
           dpkg-buildpackage -D -S --sanitize-env
           echo "::endgroup::"
