build-debian: Allow the build user to run sudo
Enables us to run tests which require root privileges as part of the
package build.

--- a/gh-actions/common/build-debian/action.yaml
+++ b/gh-actions/common/build-debian/action.yaml
@@ -64,6 +64,10 @@ inputs:
     description: Arguments to pass to licenserecon, if any. Set to `skip` to skip the licenserecon check.
     default: ''
 
+  allow-sudo:
+    description: Allow the build to use sudo.
+    required: false
+    default: 'false'
 
 # The process:
 # 1. We build the source package in a docker container. If ca-certificates are
@@ -413,6 +417,16 @@ runs:
           adduser --disabled-password --gecos "" builder
           chown builder:builder .. -R
           echo "::endgroup::"
+
+          if [ "${{ inputs.allow-sudo }}" = 'true' ]; then
+            # Allow the build user to run sudo without a password
+            mkdir -p /etc/sudoers.d
+            echo "builder ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/builder
+
+            echo "::group::Install sudo"
+            apt install sudo
+            echo "::endgroup::"
+          fi
 
           echo "::group::Fully disable internet access for user"
           apt install iptables
