gh-actions/build-debian: Run licenserecon
We've had an upload of authd to the archive rejected because of issues
in the debian/copyright file reported by licenserecon aka lrc. Let's
avoid that in the future by running lrc as part of the build-debian
action.

I had to change the package built in the tests to get them to pass,
because lrc reports issues in the hello package. It also found issues in
cowsay and some other packages I tried. The first package which passed
was debianutils.

--- a/.github/workflows/test-build-deb.yaml
+++ b/.github/workflows/test-build-deb.yaml
@@ -42,10 +42,11 @@ jobs:
           set -eu
 
           echo "::group::Get source"
-          pull-lp-source --download-only hello
-          dpkg-source -x hello*.dsc hello-src
-          rm -rf hello_*
-          mv -v hello-src/* .
+          PKG=debianutils
+          pull-lp-source --download-only "$PKG"
+          dpkg-source -x "$PKG"*.dsc pkg-src
+          rm -rf "${PKG}_"*
+          cd pkg-src
           echo "::endgroup::"
 
           echo "::group::Mark package as a native package"
@@ -63,6 +64,7 @@ jobs:
         uses: ./.source/gh-actions/common/build-debian
         with:
           docker-image: ${{ env.UBUNTU_IMAGE }}
+          source-dir: pkg-src
           eatmydata: false
 
 
@@ -118,9 +120,10 @@ jobs:
           # Get package source
           set -eu
 
-          pull-lp-source --download-only hello
-          dpkg-source -x hello*.dsc hello-src
-          rm -rfv hello_*.{dsc,debian.}*
+          PKG=debianutils
+          pull-lp-source --download-only "$PKG"
+          dpkg-source -x "$PKG"*.dsc pkg-src
+          rm -rfv "${PKG}_"*.{dsc,debian.}*
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -132,7 +135,7 @@ jobs:
         with:
           docker-image: ${{ env.UBUNTU_IMAGE }}
           sources-only: true
-          source-dir: ./hello-src
+          source-dir: pkg-src
           lintian: skip
 
 
