--- a/gh-actions/common/build-debian/action.yaml
+++ b/gh-actions/common/build-debian/action.yaml
@@ -59,6 +59,11 @@ inputs:
     description: Arguments to pass to lintian, if any. Set to `skip` to skip the lintian check.
     default: ''
 
+  lrc:
+    required: false
+    description: Arguments to pass to licenserecon, if any. Set to `skip` to skip the licenserecon check.
+    default: ''
+
 
 # The process:
 # 1. We build the source package in a docker container. If ca-certificates are
@@ -148,6 +153,27 @@ runs:
 
           dpkg-source --extract "${{ inputs.from-sources-file }}" "${srcdir}"
           echo "SOURCE_DIR=${srcdir}" >> "${GITHUB_ENV}"
+          echo "::endgroup::"
+
+    - name: Check licenses
+      if: ${{ inputs.lrc != 'skip' }}
+      uses: kohlerdominik/docker-run-action@v2.0.0
+      with:
+        # Use ubuntu:devel to have a recent version of licenserecon, because we
+        # found older versions to report false positives (e.g. GPL-2 vs GPL-2+).
+        image: ubuntu:devel
+        volumes: |
+          ${{ github.workspace }}:${{ github.workspace }}
+        workdir: ${{ env.SOURCE_DIR }}
+        shell: bash
+        run: |
+          echo "::group::Install licenserecon"
+          apt-get update
+          apt-get install -y --no-install-recommends licenserecon
+          echo "::endgroup::"
+
+          echo "::group::Run licenserecon"
+          lrc ${{ inputs.lrc }}
           echo "::endgroup::"
 
     - name: Prepare source package
